clusters/mac-mini/disabled/logging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    kubernetes.io/ingress.class: nginx
    # Kibana Operator runs on HTTPS (Self-Signed) by default.
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-Proto https;
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.baranacikgoz.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-kibana-kb-http
                port:
                  number: 5601
